--- a/proffesional_python/requirements.txt
+++ b/proffesional_python/requirements.txt
@@ -1,44 +1,103 @@
-asttokens==2.2.1
-backcall==0.2.0
-certifi==2022.12.7
-charset-normalizer==2.0.12
-comm==0.1.2
-contourpy==1.0.6
-cycler==0.11.0
-debugpy==1.6.5
-decorator==5.1.1
-entrypoints==0.4
-executing==1.2.0
-fonttools==4.38.0
-idna==3.4
-ipykernel==6.20.2
-ipython==8.8.0
-jedi==0.18.2
-jupyter_client==7.4.9
-jupyter_core==5.1.3
-kiwisolver==1.4.4
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
-numpy==1.24.1
-packaging==22.0
-parso==0.8.3
+apturl==0.5.2
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+blinker==1.4
+Brlapi==0.8.3
+cachetools==5.0.0
+certifi==2020.6.20
+chardet==4.0.0
+chrome-gnome-shell==0.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info===1.1build1
+duplicity==0.8.21
+evdev==1.4.0
+fasteners==0.14.1
+future==0.18.2
+google-api-python-client==1.7.11
+google-auth==1.5.1
+google-auth-httplib2==0.1.0
+greenlet==1.1.2
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+input-remapper==1.5.0
+jeepney==0.7.1
+keymapper==0.2
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+numpy==1.21.5
+oauth2client==4.1.3
+oauthlib==3.2.0
+olefile==0.46
+paramiko==2.9.3
 pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==2.6.2
-prompt-toolkit==3.0.36
-psutil==5.9.4
+Pillow==9.0.1
+protobuf==3.12.4
+psutil==5.9.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.14.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pyzmq==25.0.0
-requests==2.27.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycairo==1.20.1
+pycups==2.0.1
+pydantic==1.8.2
+pydbus==0.6.0
+PyDrive==1.3.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyserial==3.5
+python-apt==2.3.0+ubuntu2.1
+python-dateutil==2.8.1
+python-debian===0.1.43ubuntu1
+python-magic==0.4.24
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+rsa==4.8
+SecretStorage==3.3.1
+setproctitle==1.2.2
 six==1.16.0
-stack-data==0.6.2
-tornado==6.2
-traitlets==5.8.1
-urllib3==1.26.13
-wcwidth==0.2.6
+soupsieve==2.3.1
+SQLAlchemy==1.4.31
+systemd-python==234
+typing-extensions==3.10.0.2
+ubuntu-advantage-tools==27.12
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
+webencodings==0.5.1
+wxPython==4.0.7
+xdg==5
+xkit==0.0.0
+Yapps2==2.2.1
+zipp==1.0.0
