--- a/math/requirements.txt
+++ b/math/requirements.txt
@@ -43,6 +43,7 @@ MarkupSafe==2.1.2
 matplotlib==3.6.3
 matplotlib-inline==0.1.6
 mistune==2.0.4
+mpmath==1.2.1
 nbclassic==0.4.8
 nbclient==0.7.2
 nbconvert==7.2.9
@@ -83,6 +84,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
+sympy==1.11.1
 terminado==0.17.1
 tinycss2==1.2.1
 tornado==6.2
